index.html change

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			/* Downsize the brand/project name a bit */
 			.navbar .brand {
 				padding: 15px 120px px 16px; /* Increase vertical padding to match navbar links */
-				font-size: 38px;
+				font-size: 34px;
 				font-weight: lighter;
 				text-shadow: 0 0px 0 rgba(0,0,0,.5);
 			}
@@ -275,7 +275,7 @@
         <div class="navbar navbar-inverse navbar-fixed-top">
 	        <div class="navbar-inner">
 			      <div class="container">			         			        
-					  <a href="index.html" class="brand">Uber</a>
+					  <a href="index.html" class="brand">Manage Locations</a>
 			      </div>	    
 	     	 </div>
        </div>
